# Lab-di-IA-2024-2025

./: CMakeLists.txt  Functions.txt  README.txt  Results.txt  main.cpp  shi-tomasi.cpp  shi-tomasi.h
pano/selfie/: desktop.ini
src/: corners.cpp  main.cpp  ml.cpp  ml.h  my_brief.cpp  my_brief.h  my_corners.cpp  my_corners.h  my_orb.cpp  my_orb.h  my_sift.cpp  my_sift.h  ocv_corners.cpp  ocv_corners.h  ocv_orb.cpp  ocv_orb.h  ocv_sift.cpp  orb.cpp  orb.h  shi-tomasi.cpp  shi-tomasi.h  sift.cpp  sift.h
